# webrtc2sip

./: .gitignore  Building_Source_v2_0.md  FAQ.md  Makefile.am  README.md  ReleaseNotes.md  SSL_CA.der  SSL_CA.pem  SSL_Priv.pem  SSL_Pub.der  SSL_Pub.pem  autogen.sh  config.xml  configure.ac  mediaproxy.sln  mediaproxy.vcproj  mp_c2c.cc  mp_c2c.h  mp_common.h  mp_config.h  mp_engine.cc  mp_engine.h  mp_mail.cc  mp_mail.h  mp_mediaproxy.cc  mp_mutex.cc  mp_mutex.h  mp_net_transport.cc  mp_object.cc  mp_peer.cc  mp_peer.h  mp_proxyplugin.cc  mp_proxyplugin.h  mp_proxyplugin_consumer_audio.cc  mp_proxyplugin_consumer_audio.h  mp_proxyplugin_consumer_video.cc  mp_proxyplugin_consumer_video.h  mp_proxyplugin_mgr.cc  mp_proxyplugin_mgr.h  mp_proxyplugin_producer_audio.h  (+11 more)
db/: mp_db.cc  mp_db.h  mp_db_model.cc  mp_db_model.h
db/sqlite/: mp_db_sqlite.cc  mp_db_sqlite.h
documentation/: architecture.dia  module_click-to-call.dia  module_mediacoder.dia  module_rtcwebbreaker.dia  module_sipproxy.dia  technical-guide-1.0.doc
doubango/: tinyBFCP.vcproj  tinyDAV.vcproj  tinyHTTP.vcproj  tinyIPSec.vcproj  tinyMEDIA.vcproj  tinyMSRP.vcproj  tinyNET.vcproj  tinyRTP.vcproj  tinySAK.vcproj  tinySDP.vcproj  tinySIGCOMP.vcproj  tinySIP.vcproj  tinySMS.vcproj  tinyXCAP.vcproj
jsoncpp/json/: json.h
tinywrap/: SipStack.cxx  SipStack.h
trunk/: Makefile.am  config.xml  configure.ac  mediaproxy.sln  mediaproxy.vcproj  mp_c2c.cc  mp_c2c.h  mp_common.h  mp_config.h  mp_engine.cc  mp_engine.h  mp_mail.cc  mp_mail.h  mp_mediaproxy.cc  mp_mutex.cc  mp_mutex.h  mp_net_transport.cc  mp_net_transport.h  mp_object.cc  mp_object.h  mp_peer.cc  mp_peer.h  mp_proxyplugin.cc  mp_proxyplugin.h  mp_proxyplugin_consumer_audio.cc  mp_proxyplugin_consumer_audio.h  mp_proxyplugin_consumer_video.h  mp_proxyplugin_mgr.cc  mp_proxyplugin_mgr.h  mp_proxyplugin_producer_audio.cc  mp_proxyplugin_producer_audio.h  mp_proxyplugin_producer_video.cc  mp_proxyplugin_producer_video.h  mp_recaptcha.cc  mp_session.h  mp_session_av.cc  mp_session_av.h  mp_wrap.cc  mp_wrap.h  resiprocate-deprecated.patch  (+1 more)
trunk/db/sqlite/: mp_db_sqlite.cc  mp_db_sqlite.h
trunk/documentation/: architecture.dia  module_rtcwebbreaker.dia  module_sipproxy.dia  technical-guide-1.0.doc
trunk/doubango/: tinyBFCP.vcproj  tinyDAV.vcproj  tinyHTTP.vcproj  tinyIPSec.vcproj  tinyMEDIA.vcproj  tinyMSRP.vcproj  tinyNET.vcproj  tinyRTP.vcproj  tinySAK.vcproj  tinySIGCOMP.vcproj  tinySIP.vcproj  tinySMS.vcproj  tinyXCAP.vcproj
trunk/jsoncpp/: jsoncpp.cc
trunk/website/: contact.htm  index.html
website/: contact.htm  index.html
website/assets/css/: bootstrap.css
wiki/: Building_Source_v1_0.wiki  Building_Source_v2_0.wiki  FAQ.wiki  ReleaseNotes.wiki
xcode/webrtc2sip.xcodeproj/: project.pbxproj
xcode/webrtc2sip.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/webrtc2sip.xcodeproj/project.xcworkspace/xcuserdata/mamadou.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/webrtc2sip.xcodeproj/xcuserdata/mamadou.xcuserdatad/xcschemes/: webrtc2sip.xcscheme  xcschememanagement.plist
